--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+*,
+html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Dm Sans";
+}
+
+body {
+  background-color: #111315;
+  color: #fef7ee;
+  margin: 0;
+}
