background image and vector ref correction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="main-container">
   <div class="header-img">
-    <img src="../assets/bg-cafe.jpg" alt="Imagen de fondo" />
+    <img src="assets/bg-cafe.jpg" alt="Imagen de fondo" />
   </div>
 
   <div class="coffee-container">
     <div class="heading">
-      <img src="../assets/vector.svg" alt="" />
+      <img src="assets/vector.svg" alt="" />
       <div class="title-subtitle">
         <h1>Our Collection</h1>
         <p>
